fix icon spacing

--- a/app/assets/stylesheets/bootstrap_and_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.scss
@@ -66,6 +66,10 @@ a:hover, a:visited, a:link, a:active {
 	text-decoration: none;
 }
 
+a [class^="icon-"], a [class*=" icon-"] {
+	margin: 6px;
+}
+
 .badge {
 	margin: 1px;
 }
